--- a/css/_base.scss
+++ b/css/_base.scss
@@ -33,6 +33,9 @@ img {
   display: block;
   max-width: 100%;
 }
+strong {
+  font-weight: 600;
+}
 body {
   font-family: "Poppins", sans-serif;
   font-size: 14px;
@@ -58,14 +61,14 @@ body {
 }
 .heading {
   font-weight: bold;
-  line-height: 1.25;
-  font-size: 40px;
+  line-height: 1.5;
+  font-size: 6rem;
   text-transform: capitalize;
 }
 .text {
-  font-size: 16px;
+  font-size: 2rem;
   font-weight: 300;
-  line-height: 1.5;
+  line-height: 1.75;
   color: $text-color-light;
   &--small {
     font-size: 12px;
@@ -81,7 +84,7 @@ body {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  border-radius: 12px;
+  border-radius: 20px;
   border: none;
   text-align: center;
   font-size: 2.5rem;
@@ -89,6 +92,7 @@ body {
   letter-spacing: 0.5px;
   padding: 0 6rem;
   height: 12rem;
+  text-transform: capitalize;
   &--primary {
     color: white;
     background-color: $primary;
@@ -117,7 +121,7 @@ body {
   transform: translate(-50%, -50%);
   z-index: 2;
   color: white;
-  font-size: 30px;
+  font-size: 5rem;
   width: 13rem;
   height: 13rem;
   border-radius: 100rem;
