--- a/css/_blog.scss
+++ b/css/_blog.scss
@@ -10,6 +10,7 @@
     overflow: hidden;
     position: relative;
     margin-bottom: 6rem;
+    display: block;
     &:after {
       content: "";
       position: absolute;
@@ -23,12 +24,17 @@
     }
   }
   &-title {
-    font-size: 20px;
-    margin-bottom: 4rem;
+    font-size: 3rem;
+    margin-bottom: 3rem;
     font-weight: 600;
+    display: block;
+    color: inherit;
   }
   &-desc {
-    margin-bottom: 6rem;
+    margin-bottom: 5rem;
+  }
+  &-by {
+    font-size: 2rem;
   }
   &-author {
     color: inherit;
@@ -47,19 +53,23 @@
   }
   &-item-title {
     font-weight: 600;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
     line-height: 1.5;
+    font-size: 2.5rem;
+    color: inherit;
+    display: block;
   }
   &-item-author {
     font-weight: 300;
     color: $text-color-light;
+    font-size: 2rem;
   }
   &-item-image {
     position: relative;
     height: 0;
     padding-bottom: 100%;
     img {
-      border-radius: 12px;
+      border-radius: 20px;
       width: 100%;
       height: 100%;
       object-fit: cover;
