--- a/css/_book.scss
+++ b/css/_book.scss
@@ -18,6 +18,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 10rem;
     grid-gap: 2.5rem;
+    font-size: 2.5rem;
   }
   &-button {
     width: 10rem;
@@ -36,7 +37,7 @@
     padding: 0 3rem;
     height: 10rem;
     ion-icon {
-      font-size: 20px;
+      font-size: 3rem;
       color: $primary;
     }
   }
@@ -46,6 +47,14 @@
   &-input {
     border: none;
     background-color: transparent;
+    font-size: inherit;
+    font-weight: 300;
+    &::-webkit-input-placeholder {
+      color: $gray-blur;
+    }
+    &::-moz-input-placeholder {
+      color: $gray-blur;
+    }
   }
   @media screen and (max-width: 767px) {
     padding: 8rem 0 6rem;
@@ -69,8 +78,31 @@
   background-color: $gray;
   border-radius: 12px;
   position: relative;
+  &:hover .dropdown-list {
+    opacity: 1;
+    visibility: visible;
+  }
   &-list {
-    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+    background-color: white;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.2s ease;
+  }
+  &-item {
+    padding: 3rem;
+    cursor: pointer;
+    transition: all 0.2s linear;
+    &:hover {
+      background-color: $light-blue;
+    }
   }
   &-select {
     display: flex;
@@ -78,9 +110,11 @@
     align-items: center;
     height: 100%;
     padding: 0 3rem;
+    color: $gray-blur;
+    font-weight: 300;
   }
   ion-icon {
-    font-size: 20px;
+    font-size: 3rem;
     color: $primary;
   }
 }
