--- a/css/app.css
+++ b/css/app.css
@@ -43,6 +43,10 @@ img {
   max-width: 100%;
 }
 
+strong {
+  font-weight: 600;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   font-size: 14px;
@@ -74,15 +78,15 @@ body {
 
 .heading {
   font-weight: bold;
-  line-height: 1.25;
-  font-size: 40px;
+  line-height: 1.5;
+  font-size: 6rem;
   text-transform: capitalize;
 }
 
 .text {
-  font-size: 16px;
+  font-size: 2rem;
   font-weight: 300;
-  line-height: 1.5;
+  line-height: 1.75;
   color: #475c65;
 }
 
@@ -108,7 +112,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border-radius: 12px;
+  border-radius: 20px;
   border: none;
   text-align: center;
   font-size: 2.5rem;
@@ -116,6 +120,7 @@ body {
   letter-spacing: 0.5px;
   padding: 0 6rem;
   height: 12rem;
+  text-transform: capitalize;
 }
 
 .btn--primary {
@@ -158,7 +163,7 @@ body {
           transform: translate(-50%, -50%);
   z-index: 2;
   color: white;
-  font-size: 30px;
+  font-size: 5rem;
   width: 13rem;
   height: 13rem;
   border-radius: 100rem;
@@ -287,12 +292,13 @@ body {
       -ms-flex-align: center;
           align-items: center;
   list-style: none;
-  gap: 0 80px;
+  gap: 0 8rem;
 }
 
 .menu-link {
   color: inherit;
   font-weight: 500;
+  font-size: 2.5rem;
 }
 
 .search {
@@ -308,8 +314,18 @@ body {
   border-radius: 12px;
   border: none;
   background-color: #f3f3f3;
-  font-size: 2rem;
+  font-size: 2.5rem;
   margin-bottom: 4rem;
+}
+
+.search-input::-webkit-input-placeholder {
+  color: #778fa3;
+  font-weight: 300;
+}
+
+.search-input::-moz-input-placeholder {
+  color: #778fa3;
+  font-weight: 300;
 }
 
 .search-bottom {
@@ -462,13 +478,19 @@ body {
 }
 
 .destination-title {
-  font-size: 14px;
-  font-weight: bold;
-  margin-bottom: 15px;
+  font-size: 2rem;
+  font-weight: 600;
+  margin-bottom: 1.5rem;
+  line-height: 1.5;
+}
+
+.destination-place {
+  font-size: 2rem;
+  letter-spacing: 1px;
 }
 
 .destination-heading {
-  margin-bottom: 5rem;
+  margin-bottom: 4rem;
   max-width: 40rem;
 }
 
@@ -479,8 +501,8 @@ body {
 
 @media screen and (min-width: 768px) {
   .destination-info {
-    -webkit-transform: translateY(-70px);
-            transform: translateY(-70px);
+    -webkit-transform: translateY(-100px);
+            transform: translateY(-100px);
   }
 }
 
@@ -505,14 +527,15 @@ body {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 11.5rem;
+  gap: 0 2rem;
 }
 
-.offer-list {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 0 8rem;
+.offer-item {
+  margin-left: 8rem;
+}
+
+.offer-text {
+  max-width: 60rem;
 }
 
 .offer-image {
@@ -540,12 +563,18 @@ body {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 2rem;
+  font-size: 2.2rem;
+}
+
+.offer-tour {
+  font-weight: 600;
 }
 
 .offer-title {
   font-weight: 600;
   line-height: 1.5;
   margin-bottom: 4.5rem;
+  font-size: 3rem;
 }
 
 .offer-bottom {
@@ -558,6 +587,13 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-size: 2.2rem;
+  font-weight: 300;
+}
+
+.offer-bottom ion-icon {
+  margin-right: 5px;
+  font-size: 3rem;
 }
 
 .offer-location {
@@ -571,8 +607,6 @@ body {
 
 .offer-location ion-icon {
   color: #cad6e1;
-  margin-right: 5px;
-  font-size: 20px;
 }
 
 .offer-rating {
@@ -584,11 +618,6 @@ body {
           align-items: center;
 }
 
-.offer-rating ion-icon {
-  margin-right: 5px;
-  font-size: 20px;
-}
-
 @media screen and (max-width: 767px) {
   .offer {
     margin-bottom: 10rem;
@@ -597,32 +626,16 @@ body {
     margin-bottom: 5rem;
   }
   .offer-list {
-    display: -ms-grid;
-    display: grid;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    grid-auto-columns: 75%;
-    grid-auto-flow: column;
-    grid-gap: 0 5rem;
-    overflow: auto;
-    overflow-y: hidden;
-    -ms-scroll-snap-type: x mandatory;
-        scroll-snap-type: x mandatory;
-    scroll-snap-stop: always;
-    -ms-touch-action: manipulation;
-    touch-action: manipulation;
-    -webkit-overflow-scrolling: touch;
-    scroll-padding: 1rem;
-    -ms-grid-columns: unset;
-        grid-template-columns: unset;
+    -webkit-transform: none;
+            transform: none;
+  }
+  .offer-item {
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
   .offer-list::-webkit-scrollbar {
     display: none;
     width: 0;
-  }
-  .offer-list > * {
-    scroll-snap-align: start;
   }
 }
 
@@ -641,6 +654,7 @@ body {
   overflow: hidden;
   position: relative;
   margin-bottom: 6rem;
+  display: block;
 }
 
 .blog-image:after {
@@ -658,13 +672,19 @@ body {
 }
 
 .blog-title {
-  font-size: 20px;
-  margin-bottom: 4rem;
+  font-size: 3rem;
+  margin-bottom: 3rem;
   font-weight: 600;
+  display: block;
+  color: inherit;
 }
 
 .blog-desc {
-  margin-bottom: 6rem;
+  margin-bottom: 5rem;
+}
+
+.blog-by {
+  font-size: 2rem;
 }
 
 .blog-author {
@@ -693,13 +713,17 @@ body {
 
 .blog-item-title {
   font-weight: 600;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
   line-height: 1.5;
+  font-size: 2.5rem;
+  color: inherit;
+  display: block;
 }
 
 .blog-item-author {
   font-weight: 300;
   color: #475c65;
+  font-size: 2rem;
 }
 
 .blog-item-image {
@@ -709,7 +733,7 @@ body {
 }
 
 .blog-item-image img {
-  border-radius: 12px;
+  border-radius: 20px;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -757,6 +781,7 @@ body {
   -ms-grid-columns: 1fr 1fr 10rem;
       grid-template-columns: 1fr 1fr 10rem;
   grid-gap: 2.5rem;
+  font-size: 2.5rem;
 }
 
 .book-button {
@@ -791,7 +816,7 @@ body {
 }
 
 .book-destination ion-icon {
-  font-size: 20px;
+  font-size: 3rem;
   color: #5171f1;
 }
 
@@ -802,6 +827,16 @@ body {
 .book-input {
   border: none;
   background-color: transparent;
+  font-size: inherit;
+  font-weight: 300;
+}
+
+.book-input::-webkit-input-placeholder {
+  color: #778fa3;
+}
+
+.book-input::-moz-input-placeholder {
+  color: #778fa3;
 }
 
 @media screen and (max-width: 767px) {
@@ -831,8 +866,37 @@ body {
   position: relative;
 }
 
+.dropdown:hover .dropdown-list {
+  opacity: 1;
+  visibility: visible;
+}
+
 .dropdown-list {
-  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  background-color: white;
+  border-radius: 20px;
+  overflow: hidden;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.dropdown-item {
+  padding: 3rem;
+  cursor: pointer;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+
+.dropdown-item:hover {
+  background-color: #daefff;
 }
 
 .dropdown-select {
@@ -847,15 +911,17 @@ body {
           align-items: center;
   height: 100%;
   padding: 0 3rem;
+  color: #778fa3;
+  font-weight: 300;
 }
 
 .dropdown ion-icon {
-  font-size: 20px;
+  font-size: 3rem;
   color: #5171f1;
 }
 
 .footer-header {
-  margin-bottom: 11.5rem;
+  margin-bottom: 9rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -891,8 +957,8 @@ body {
       -ms-flex-align: center;
           align-items: center;
   margin-top: 8rem;
-  gap: 0 5.5rem;
-  font-size: 20px;
+  gap: 0 4.5rem;
+  font-size: 3rem;
 }
 
 .footer-columns {
@@ -905,9 +971,9 @@ body {
 }
 
 .footer-title {
-  font-weight: 300;
-  text-transform: uppercase;
-  margin-bottom: 5.5rem;
+  font-weight: 500;
+  margin-bottom: 5rem;
+  letter-spacing: 0.5px;
 }
 
 .footer-list {
@@ -921,6 +987,8 @@ body {
 .footer-link {
   color: inherit;
   display: inline-block;
+  font-size: 1.8rem;
+  font-weight: 300;
 }
 
 @media screen and (max-width: 767px) {
